@startuml
title Class Diagram for ClearCategoryCommand Feature
skinparam classAttributeIconSize 0
hide circle
left to right direction

class "{abstract}\nCommand" as Command {
  + execute(inventory: Inventory, ui: UI)
}

class ClearCommandParser {
  + parse(input: String)
}

class ClearCategoryCommand {
  - categoryName: String
  + execute(inventory: Inventory, ui: UI)
}

class Inventory {
  + findCategoryByName(categoryName: String)
}

class Category {
  - name: String
  + isEmpty(): boolean
  + getItemCount(): int
  + getItems()
}

class Item {
  - name: String
  - quantity: int
}

class UI {
  + showClearCategoryConfirmation(...)
  + showClearCategoryCancelled(...)
  + showCategoryItemsCleared(...)
  + showCategoryCleared(...)
  + showCategoryAlreadyEmpty(...)
  + showCategoryNotFound(...)
  + readCommand()
}

Command <|-- ClearCategoryCommand
ClearCommandParser ..> ClearCategoryCommand : creates
ClearCategoryCommand --> Inventory : queries
ClearCategoryCommand --> Category : clears
ClearCategoryCommand --> UI : displays through
Inventory "1" o-- "*" Category
Category "1" o-- "*" Item
@enduml
